feat(http): add predicate endpoint
