# http/swagger.yml
@@ -1640,6 +1640,71 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /delete:
+    post:
+      summary: delete time-series data from influxdb
+      requestBody:
+          description: predicate delete request
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PredicateNode"
+      parameters:
+        - $ref: '#/components/parameters/TraceSpan'
+        - in: query
+          name: org
+          description: specifies the destination organization for writes
+          required: true
+          schema:
+            type: string
+            description: all points within batch are written to this organization.
+        - in: query
+          name: bucket
+          description: specifies the destination bucket for writes
+          required: true
+          schema:
+            type: string
+            description: all points within batch are written to this bucket.
+        - in: query
+          name: orgID
+          description: specifies the organization ID of the resource
+          schema:
+            type: string
+        - in: query
+          name: bucketID
+          description: specifies the destination bucket ID for writes
+          required: true
+          schema:
+            type: string
+            description: all points within batch are written to this bucket.
+      responses:
+        '204':
+          description: delete has been accepted
+        '400':
+          description: invalid request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: the bucket or organization is not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '403':
+          description: no token was sent or does not have sufficient permissions.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /ready:
     servers:
         - url: /
@@ -6158,6 +6223,10 @@ components:
           $ref: "#/components/schemas/Identifier"
         path:
           $ref: "#/components/schemas/StringLiteral"
+    PredicateNode:
+      oneOf:
+        - $ref: "#/components/schemas/LogicalNode"
+        - $ref: "#/components/schemas/TagRuleNode"
     Node:
       oneOf:
         - $ref: "#/components/schemas/Expression"
@@ -9566,6 +9635,29 @@ components:
             $ref: "#/components/schemas/StatusRule"
         labels:
           $ref: "#/components/schemas/Labels"
+    LogicalNode:
+      type: object
+      required: [nodeType,operator,children]
+      properties:
+        nodeType:
+          type: string
+          enum: [logical]
+        operator:
+          type: string
+          enum: ["and", "or"]
+        children:
+          type: array
+          items:
+            $ref: "#/components/schemas/PredicateNode"
+    TagRuleNode:
+      type: object
+      required: [nodeType]
+      allOf:
+        - $ref: "#/components/schemas/TagRule"
+      properties:
+        nodeType:
+          type: string
+          enum: [tagRule]
     TagRule:
       type: object
       properties:
